feat: add new layout and implement image load

--- a/codejam-image-api/src/scss/base.scss
+++ b/codejam-image-api/src/scss/base.scss
@@ -39,7 +39,7 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 270px;
+    width: 300px;
     height: 100%;
     margin-left: 20px;
 
@@ -111,15 +111,12 @@ li {
     cursor: pointer;
   }
 
-  input[type="color"] {
-    display: none;
+  .default {
+    margin-left: 58px;
   }
 
-  .pixel-size {
-    width: 45px;
-    margin-left: 98px;
-
-    outline: none;
+  input[type="color"] {
+    display: none;
   }
 
   .main-tools__item:nth-child(4) {
@@ -170,11 +167,45 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   width: 512px;
   height: 512px;
   margin-right: 100px;
+}
 
-  background-color: lightgray;
+.image-tools {
+  width: 512px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+
+  .load-image {
+    background-color: rgb(130, 138, 245);
+    padding: 2px 10px 0;
+    border-radius: 5%;
+    line-height: 1rem;
+    cursor: pointer;
+  }
+
+  .image-grayscale {
+    background-color: rgb(130, 138, 245);
+    padding: 2px 10px 0;
+    border-radius: 5%;
+    line-height: 1rem;
+    cursor: pointer;
+  }
+}
+
+.canvas-size-input {
+  width: 150px;
+  margin-top: 20px;
+}
+
+.canvas {
+  width: 512px;
+  height: 512px;
+
+  image-rendering: pixelated;
 }
 
 @media only screen and (max-width: 1440px) {
