--- a/codejam-image-api/src/scss/base.scss
+++ b/codejam-image-api/src/scss/base.scss
@@ -179,26 +179,61 @@ li {
   justify-content: space-between;
   margin-bottom: 20px;
 
+  .image-grayscale,
   .load-image {
-    background-color: rgb(130, 138, 245);
+    background-color: rgb(0, 188, 212);
+    color: white;
     padding: 2px 10px 0;
     border-radius: 5%;
     line-height: 1rem;
     cursor: pointer;
   }
 
-  .image-grayscale {
-    background-color: rgb(130, 138, 245);
-    padding: 2px 10px 0;
-    border-radius: 5%;
-    line-height: 1rem;
-    cursor: pointer;
+  .image-search {
+    position: relative;
+    padding: 3px 10px 3px;
+    border: 0;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12);
   }
 }
 
+.size-label {
+  display: flex;
+  justify-content: space-between;
+  width: 148px;
+  margin-top: 30px;
+  color: white;
+  z-index: 1;
+  user-select: none;
+  pointer-events: none;
+}
+
 .canvas-size-input {
+  -webkit-appearance: none;
   width: 150px;
-  margin-top: 20px;
+  margin-top: 12px;
+  outline: none;
+
+  &::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 3px;
+    cursor: pointer;
+    background: #00a6bb;
+    border: 0;
+  }
+
+  &::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    position: relative;
+    bottom: 38px;
+    width: 30px;
+    height: 30px;
+
+    border-radius: 50% 50% 0 50%;
+    transform: rotate(45deg);
+    cursor: pointer;
+    background: #00a6bb;
+  }
 }
 
 .canvas {
