--- a/codejam-image-api/src/scss/base.scss
+++ b/codejam-image-api/src/scss/base.scss
@@ -100,8 +100,7 @@ li {
   }
 
 
-  label[for="input-color"],
-  .default {
+  label[for="input-color"] {
     margin-left: 46px;
     padding: 0 5px;
 
@@ -109,10 +108,6 @@ li {
 
     border: 1px solid black;
     cursor: pointer;
-  }
-
-  .default {
-    margin-left: 58px;
   }
 
   input[type="color"] {
@@ -179,6 +174,7 @@ li {
   justify-content: space-between;
   margin-bottom: 20px;
 
+  .default,
   .image-grayscale,
   .load-image {
     background-color: rgb(0, 188, 212);
