--- a/codejam-image-api/src/scss/base.scss
+++ b/codejam-image-api/src/scss/base.scss
@@ -14,7 +14,7 @@ li {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .global-wrapper {
@@ -48,28 +48,57 @@ li {
 
       font-size: 1.5rem;
     }
+  }
 
-    .burger {
-      &:hover {
-        cursor: pointer;
-      }
-    }
+  .burger {
+    cursor: pointer;
   }
 
   .header__right {
     display: flex;
     align-items: center;
     margin-right: 20px;
+  }
+}
 
-    &:hover {
-      cursor: pointer;
-    }
+.login {
+  margin-right: 20px;
+  padding: 0 10px;
 
-    .login {
-      text-decoration: none;
-      color: black;
-      margin-right: 20px;
-    }
+  color: white;
+
+  background-color: rgb(0, 188, 212);
+  border-radius: 5%;
+  cursor: pointer;
+}
+
+.login-output {
+  display: flex;
+  align-items: center;
+  margin: 0 20px;
+
+  .user-avatar {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+
+    background-size: contain;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .user-name {
+    margin-right: 30px;
+  }
+
+  .logout {
+    padding: 0 10px;
+
+    color: white;
+
+    background-color: rgb(0, 188, 212);
+    border-radius: 5%;
+    cursor: pointer;
   }
 }
 
@@ -177,72 +206,86 @@ li {
 }
 
 .image-tools {
-  width: 512px;
   display: flex;
   justify-content: space-between;
+  width: 512px;
   margin-bottom: 20px;
 
   .default,
   .image-grayscale,
   .load-image {
-    background-color: rgb(0, 188, 212);
-    color: white;
     padding: 2px 10px 0;
-    border-radius: 5%;
+
     line-height: 1rem;
+    color: white;
+
+    background-color: rgb(0, 188, 212);
+    border-radius: 5%;
     cursor: pointer;
   }
 
   .image-search {
     position: relative;
+
     padding: 3px 10px 3px;
+
     border: 0;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12);
   }
 }
 
 .size-label {
+  z-index: 1;
+
   display: flex;
   justify-content: space-between;
   width: 148px;
   margin-top: 30px;
+
   color: white;
-  z-index: 1;
+
   user-select: none;
   pointer-events: none;
 }
 
 .canvas-size-input {
-  -webkit-appearance: none;
   width: 150px;
   margin-top: 12px;
+
   outline: none;
+
+  -webkit-appearance: none;
 
   &::-webkit-slider-runnable-track {
     width: 100%;
     height: 3px;
-    cursor: pointer;
+
     background: #00a6bb;
     border: 0;
+    cursor: pointer;
   }
 
   &::-webkit-slider-thumb {
-    -webkit-appearance: none;
     position: relative;
     bottom: 38px;
+
     width: 30px;
     height: 30px;
 
+    background: #00a6bb;
     border-radius: 50% 50% 0 50%;
     transform: rotate(45deg);
     cursor: pointer;
-    background: #00a6bb;
+
+    -webkit-appearance: none;
   }
 }
 
 .canvas {
   width: 512px;
   height: 512px;
+
+  background-color: lightgray;
 
   image-rendering: pixelated;
 }
