--- a/codejam-image-api/src/scss/base.scss
+++ b/codejam-image-api/src/scss/base.scss
@@ -105,7 +105,7 @@ li {
 .main {
   display: flex;
   justify-content: space-between;
-  padding: 80px 30px 80px;
+  padding: 60px 30px 0;
 }
 
 .tools-wrapper {
@@ -201,7 +201,6 @@ li {
   justify-content: space-between;
   align-items: center;
   width: 512px;
-  height: 512px;
   margin-right: 100px;
 }
 
@@ -240,7 +239,7 @@ li {
   display: flex;
   justify-content: space-between;
   width: 148px;
-  margin-top: 30px;
+  margin-top: 15px;
 
   color: white;
 
