--- a/fancy-weather/src/styles/main.scss
+++ b/fancy-weather/src/styles/main.scss
@@ -9,6 +9,8 @@ body {
   width: 1024px;
   min-height: 100vh;
   margin: 0 auto;
+
+  background-color: rgba(130, 138, 145, 0.1);
 }
 
 .form-wrapper {
@@ -42,13 +44,16 @@ body {
   .lang-select {
     width: 70px;
     margin-right: 10px;
+
     color: white;
+
     background-color: #6c757d;
     border-color: #6c757d;
 
     &:hover,
     &:focus {
       color: white;
+
       background-color: #5a6268;
       border-color: #545b62;
     }
@@ -65,9 +70,12 @@ body {
   .button-mic {
     position: absolute;
     left: -40px;
+
     width: 38px;
     height: 100%;
+
     color: white;
+
     background-color: #6c757d;
     border: 1px solid #6c757d;
     border-radius: 50%;
@@ -81,6 +89,7 @@ body {
 
     &:active {
       border: 2px solid red;
+
       animation: mic-anime 1.2s linear infinite;
     }
   }
@@ -97,15 +106,19 @@ body {
   width: 500px;
   height: 500px;
   margin: 0 0 0 20px;
+
   font-size: 3rem;
   color: white;
-  backdrop-filter: blur(5px) contrast(0.5);
+
   border-radius: 10px;
+
+  backdrop-filter: blur(5px) contrast(0.5);
 
   .location {
     display: flex;
     flex-direction: column;
     align-items: center;
+
     text-align: center;
 
     h3 {
@@ -136,19 +149,21 @@ body {
   }
 
   .forecast-detail {
-    width: 100%;
-    margin-bottom: 15px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    width: 100%;
+    margin-bottom: 15px;
+
     font-size: 1rem;
   }
 
   .forecast-daily {
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    width: 100%;
+
     font-size: 1.5rem;
   }
 
@@ -181,38 +196,43 @@ body {
   .map {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
     border-radius: 10px;
-    overflow: hidden;
   }
 
   .longitude,
   .latitude {
     color: white;
+
     backdrop-filter: blur(5px) contrast(0.5);
   }
 }
 
 .fake {
   position: fixed;
-  z-index: 2;
   top: 0;
   left: 0;
+  z-index: 2;
+
   width: 100%;
   height: 100%;
+
   backdrop-filter: contrast(0.5);
 }
 
 .error-wrapper {
   position: fixed;
-  z-index: 3;
   top: 15%;
   left: calc(50% - 160px);
+  z-index: 3;
+
   width: 320px;
+
   background-color: white;
   border: 1px solid white;
-  box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
   border-radius: 10px;
+  box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
 
   &:hover {
     border: 1px solid lightgray;
@@ -232,10 +252,13 @@ body {
 
 .dots {
   position: relative;
+
   width: 10px;
   height: 10px;
+
   background-color: #208bf1;
   border-radius: 50%;
+
   animation: dotFloating 3s infinite cubic-bezier(0.15, 0.6, 0.9, 0.1);
 
   &::before,
@@ -243,24 +266,31 @@ body {
     content: "";
     position: absolute;
     top: 0;
+
     display: inline-block;
   }
 
   &::before {
     left: -12px;
+
     width: 10px;
     height: 10px;
+
     background-color: #afe102;
     border-radius: 50%;
+
     animation: dotFloatingBefore 3s infinite ease-in-out;
   }
 
   &::after {
     left: -24px;
+
     width: 10px;
     height: 10px;
+
     background-color: #ff3270;
     border-radius: 50%;
+
     animation: dotFloatingAfter 3s infinite cubic-bezier(0.4, 0, 1, 1);
   }
 }
@@ -272,22 +302,26 @@ body {
 
   &::after {
     content: " ";
+
     display: block;
     width: 400px;
     height: 400px;
     margin: 50px;
-    border-radius: 50%;
+
     border: 6px solid #ffffff;
     border-color: #ffffff transparent #ffffff transparent;
+    border-radius: 50%;
+
     animation: dual-ring-anime 1.2s linear infinite;
   }
 }
 
 @keyframes mic-anime {
   0% {
-    transform: rotate(0deg);
-    color: red;
     font-size: 1rem;
+    color: red;
+
+    transform: rotate(0deg);
   }
 
   33% {
@@ -303,9 +337,10 @@ body {
   }
 
   100% {
-    transform: rotate(360deg);
-    color: red;
     font-size: 1rem;
+    color: red;
+
+    transform: rotate(360deg);
   }
 }
 
