--- a/fancy-weather/src/styles/main.scss
+++ b/fancy-weather/src/styles/main.scss
@@ -104,7 +104,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 500px;
-  height: 500px;
+  height: fit-content;
   margin: 0 0 0 20px;
 
   font-size: 3rem;
@@ -159,6 +159,7 @@ body {
   }
 
   .forecast-daily {
+    margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
