--- a/fancy-weather/src/styles/main.scss
+++ b/fancy-weather/src/styles/main.scss
@@ -32,9 +32,8 @@ body {
   }
 
   .selected {
-    background-color: #5a6268;
-    border-color: #545b62;
-    box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
+    background-color: #454a4e;
+    border-color: #6c757d;
   }
 
   .button-refresh {
@@ -106,6 +105,7 @@ body {
   width: 500px;
   height: fit-content;
   margin: 0 0 0 20px;
+  overflow: hidden;
 
   font-size: 3rem;
   color: white;
@@ -159,18 +159,26 @@ body {
   }
 
   .forecast-daily {
-    margin-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     width: 100%;
+    margin-bottom: 10px;
 
     font-size: 1.5rem;
+  }
+
+  .forecast-daily__temp-hight {
+    margin-right: 3px;
   }
 
   .forecast-detail__wind,
   .forecast-detail__feels {
     margin-right: 15px;
+  }
+
+  .forecast-daily__day {
+    text-align: center;
   }
 
   .forecast-daily__week-day {
@@ -428,14 +436,7 @@ body {
 
   .map-wrapper,
   .forecast-wrapper {
-    margin: 0;
-  }
-}
-
-@media only screen and (max-width: 950px) {
-  .forecast-wrapper {
-    height: auto;
-    margin-bottom: 20px;
+    margin: 0 0 20px 0;
   }
 }
 
