--- a/fancy-weather/src/styles/main.scss
+++ b/fancy-weather/src/styles/main.scss
@@ -178,6 +178,10 @@ body {
     margin: 0 15px 15px 0;
   }
 
+  .forecast-detail__humidity {
+    margin-bottom: 15px;
+  }
+
   .forecast-daily__day {
     text-align: center;
     margin: 0 10px 10px 0;
