--- a/simple-piskel-clone/src/screens/sprite/index.scss
+++ b/simple-piskel-clone/src/screens/sprite/index.scss
@@ -1,3 +1,511 @@
-h3 {
-  color: red;
+body {
+  margin: 0;
+
+  color: white;
+
+  background-color: rgb(45, 45, 45);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5vh;
+  padding: 10px 20px;
+}
+
+.header-link {
+  padding: 3px 10px;
+
+  color: black;
+  text-decoration: none;
+
+  background-color: white;
+  border-radius: 3px;
+
+  transition: all linear 0.1s;
+
+  &:hover {
+    background-color: rgb(255, 215, 0);
+  }
+}
+
+.main {
+  display: flex;
+  height: 90vh;
+}
+
+.tools {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100px;
+  height: 100%;
+  margin: 0 10px;
+}
+
+.pixel-list {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-left: 3px;
+  padding: 0;
+
+  list-style: none;
+}
+
+.pixel-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 21px;
+  height: 21px;
+  margin: 1px;
+
+  background-color: #444444;
+  border: 1px solid #444444;
+
+  &:hover {
+    border: 1px solid rgb(255, 215, 0);
+    cursor: pointer;
+  }
+}
+
+.pixel-1 {
+  width: 8px;
+  height: 8px;
+
+  background-color: white;
+}
+
+.pixel-2 {
+  width: 10px;
+  height: 10px;
+
+  background-color: white;
+}
+
+.pixel-3 {
+  width: 12px;
+  height: 12px;
+
+  background-color: white;
+}
+
+.pixel-4 {
+  width: 14px;
+  height: 14px;
+
+  background-color: white;
+}
+
+.tools-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 2px;
+  padding: 0;
+
+  list-style: none;
+}
+
+.tools-item {
+  width: 43px;
+  height: 43px;
+  margin: 1px;
+  overflow: hidden;
+
+  background-color: #444444;
+  border: 2px solid #444444;
+
+  &:hover {
+    border: 2px solid rgb(255, 215, 0);
+    cursor: pointer;
+  }
+}
+
+.tool {
+  width: 100%;
+  height: 100%;
+}
+
+.pen::before {
+  content: url("./assets/icons.png");
+  position: relative;
+  right: 185px;
+  bottom: 95px;
+}
+
+.stroke::before {
+  content: url("./assets/icons.png");
+  position: relative;
+  right: 48px;
+  bottom: 136px;
+}
+
+.bucket::before {
+  content: url("./assets/icons.png");
+  position: relative;
+  right: 230px;
+  bottom: 93px;
+}
+
+.unicolor::before {
+  content: url("./assets/icons.png");
+  position: relative;
+  right: 230px;
+  bottom: 141px;
+}
+
+.eraser::before {
+  content: url("./assets/icons.png");
+  position: relative;
+  right: 48px;
+  bottom: 230px;
+}
+
+.picker::before {
+  content: url("./assets/icons.png");
+  position: relative;
+  right: 276px;
+  bottom: 0;
+}
+
+.color-tools {
+  position: relative;
+
+  width: 100%;
+  height: 100px;
+}
+
+.color-input {
+  display: none;
+}
+
+.current-color {
+  position: absolute;
+  left: 12px;
+  z-index: 2;
+
+  width: 40px;
+  height: 40px;
+
+  border: 3px solid gray;
+
+  &:hover {
+    border: 3px solid rgb(255, 215, 0);
+    cursor: pointer;
+  }
+}
+
+.prev-color {
+  position: absolute;
+  top: 25px;
+  left: 40px;
+  z-index: 1;
+
+  width: 40px;
+  height: 40px;
+
+  border: 3px solid gray;
+
+  &:hover {
+    border: 3px solid rgb(255, 215, 0);
+    cursor: pointer;
+  }
+}
+
+.swap-colors {
+  position: absolute;
+  top: 48px;
+  left: 16px;
+
+  width: 20px;
+  height: 20px;
+  overflow: hidden;
+
+  border: 2px solid transparent;
+
+  &:hover {
+    border: 2px solid rgb(255, 215, 0);
+    cursor: pointer;
+  }
+}
+
+.swap-colors::before {
+  content: url("./assets/icons.png");
+  position: relative;
+  right: 272px;
+  bottom: 222px;
+}
+
+.frames {
+  min-width: 100px;
+  height: 100%;
+  margin-right: 10px;
+}
+
+.mini-frame-list {
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  padding: 0;
+
+  list-style: none;
+}
+
+.mini-frame {
+  position: relative;
+
+  width: 96px;
+  height: 100px;
+  margin-bottom: 10px;
+
+  background-color: black;
+  border: 2px solid darkgrey;
+  border-radius: 3px;
+
+  &:hover {
+    border: 2px solid rgb(255, 215, 0);
+    cursor: default;
+  }
+}
+
+.mini-frame__canvas {
+  width: 100%;
+  height: 100%;
+
+  background: url("./assets/canvas-background.png");
+}
+
+.mini-frame__counter {
+  position: absolute;
+  bottom: 75px;
+  left: 0;
+
+  width: 25px;
+  height: 25px;
+
+  font-weight: 600;
+  font-size: 20px;
+  text-align: center;
+  color: black;
+
+  background-color: rgb(255, 215, 0);
+  cursor: default;
+}
+
+.mini-frame__clone {
+  position: absolute;
+  bottom: 73px;
+  left: 69px;
+
+  width: 25px;
+  height: 25px;
+
+  background-color: gray;
+  border-bottom: 2px solid gray;
+  border-left: 2px solid gray;
+  overflow: hidden;
+
+  &:hover {
+    border-color: rgb(255, 215, 0);
+    cursor: pointer;
+  }
+
+  &::before {
+    position: relative;
+    right: 276px;
+    bottom: 78px;
+    content: url("./assets/icons.png");
+  }
+}
+
+.mini-frame__delete {
+  position: absolute;
+  bottom: 0;
+  left: 69px;
+
+  width: 25px;
+  height: 25px;
+
+  background-color: gray;
+  border-top: 2px solid gray;
+  border-left: 2px solid gray;
+  overflow: hidden;
+
+  &:hover {
+    border-color: rgb(255, 215, 0);
+    cursor: pointer;
+  }
+
+  &::before {
+    position: relative;
+    right: 276px;
+    bottom: 109px;
+    content: url("./assets/icons.png");
+  }
+}
+
+.mini-frame__dragndrop {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  width: 25px;
+  height: 25px;
+
+  background-color: gray;
+  border-top: 2px solid gray;
+  border-right: 2px solid gray;
+  overflow: hidden;
+
+  &:hover {
+    border-color: rgb(255, 215, 0);
+    cursor: move;
+  }
+
+  &::before {
+    position: relative;
+    right: 276px;
+    bottom: 49px;
+    content: url("./assets/icons.png");
+  }
+}
+
+.mini-frame__add {
+  display: flex;
+  align-items: center;
+  width: 96px;
+  height: 48px;
+
+  border: 2px solid gray;
+  border-radius: 3px;
+  background-color: black;
+
+  &:hover {
+    border-color: rgb(255, 215, 0);
+    cursor: pointer;
+  }
+}
+
+.mini-frame__add-icon {
+  min-width: 20px;
+  max-width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  overflow: hidden;
+
+  &::before {
+    position: relative;
+    right: 276px;
+    bottom: 160px;
+    content: url("./assets/icons.png");
+  }
+}
+
+
+.work-area {
+  width: calc(100% - 300px);
+  height: 100%;
+  margin-right: 5px;
+}
+
+.main-frame {
+  display: block;
+  width: 512px;
+  height: 512px;
+  margin: 5vh auto 0;
+
+  background: url("./assets/canvas-background.png");
+  cursor: crosshair;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 200px;
+  height: 100%;
+  margin-right: 20px;
+}
+
+.result-headers {
+  margin: 30px 0 5px;
+}
+
+.preview {
+  width: 100%;
+  height: 200px;
+
+  background-color: darkgrey;
+}
+
+.fps-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.fps-display {
+  width: 50px;
+  margin-left: 5px;
+}
+
+.fps-input {
+  width: 130px;
+  margin-right: 5px;
+}
+
+.resolution-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+}
+
+.resolution-item {
+  width: 100%;
+  margin: 5px 0;
+
+  text-align: center;
+
+  background-color: gray;
+  border: 2px solid black;
+  border-radius: 5px;
+
+  &:hover {
+    border: 2px solid rgb(255, 215, 0);
+    cursor: pointer;
+  }
+}
+
+.export-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  width: 90%;
+}
+
+.export-item {
+  padding: 5px 20px;
+
+  color: black;
+
+  background-color: rgb(255, 215, 0);
+  border: 2px solid black;
+  border-radius: 5px;
+
+  transition: all linear 0.1s;
+
+  &:hover {
+    background-color: white;
+    cursor: pointer;
+  }
+}
+
+.selected {
+  border-color: rgb(255, 215, 0);
+}
+
+@media (max-width: 890px) {
+  .work-area {
+    width: 512px;
+  }
 }
