--- a/simple-piskel-clone/src/screens/sprite/index.scss
+++ b/simple-piskel-clone/src/screens/sprite/index.scss
@@ -237,15 +237,38 @@ body {
   bottom: 222px;
 }
 
+.keyboard-shortcuts {
+  width: 40px;
+  height: 25px;
+  margin: 0 auto;
+  overflow: hidden;
+
+  border: 2px solid gray;
+  border-radius: 5px;
+  cursor: pointer;
+
+  &:hover {
+    border-color: rgb(255, 215, 0);
+  }
+
+  &::before {
+    content: url("./assets/icons.png");
+    position: relative;
+    right: 272px;
+    bottom: 134px;
+  }
+}
+
 .frames {
   min-width: 110px;
-  overflow-y: scroll;
-  overflow-x: hidden;
   max-height: 100vh;
   margin-right: 10px;
+  overflow-x: hidden;
+  overflow-y: scroll;
 
   &::-webkit-scrollbar {
     position: absolute;
+
     width: 5px;
   }
 
@@ -490,11 +513,11 @@ body {
 
   width: 15px;
   height: 15px;
+  overflow: hidden;
 
   background-color: gray;
   border: 2px solid white;
   cursor: pointer;
-  overflow: hidden;
 
   &:hover {
     border-color: rgb(255, 215, 0);
@@ -580,12 +603,104 @@ body {
   }
 }
 
+.cheatsheet {
+  position: absolute;
+  z-index: 99;
+
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(5px) contrast(0.4);
+}
+
+.cheatsheet__container {
+  width: 80%;
+  min-width: 400px;
+  margin: 50px auto;
+
+  user-select: none;
+
+  background-color: gray;
+}
+
+.cheatsheet__head {
+  position: relative;
+
+  height: 40px;
+
+  font-weight: 600;
+  font-size: 32px;
+  text-align: center;
+  color: black;
+
+  background-color: rgb(255, 215, 0);
+}
+
+.cheatsheet__close {
+  position: absolute;
+  right: 0;
+
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 8px 8px 0 0;
+
+  font-size: 20px;
+
+  border: 2px solid black;
+  cursor: pointer;
+
+  &:hover {
+    color: red;
+
+    border-color: red;
+  }
+}
+
+.cheatsheet__body {
+  border: 2px solid rgb(255, 215, 0);
+  padding-bottom: 10px;
+
+  font-size: 22px;
+  color: black;
+}
+
+.cheatsheet__list {
+  list-style: none;
+}
+
+.cheatsheet__list-item {
+  margin-bottom: 5px;
+  align-items: center;
+}
+
+.cheatsheet__short {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  margin-right: 20px;
+
+  text-align: center;
+  color: rgb(255, 215, 0);
+
+  border: 2px solid black;
+  cursor: pointer;
+
+  &:hover {
+    border-color: rgb(255, 215, 0);
+  }
+}
+
 .selected {
   border-color: rgb(255, 215, 0);
 }
 
 .over {
   border-color: red;
+  color: red;
+}
+
+.hidden {
+  display: none;
 }
 
 @media (max-width: 890px) {
