--- a/simple-piskel-clone/src/screens/sprite/index.scss
+++ b/simple-piskel-clone/src/screens/sprite/index.scss
@@ -14,7 +14,15 @@ body {
   padding: 10px 20px;
 }
 
+.links {
+  display: flex;
+  align-items: center;
+
+  user-select: none;
+}
+
 .header-link {
+  margin-left: 10px;
   padding: 3px 10px;
 
   color: black;
@@ -22,12 +30,33 @@ body {
 
   background-color: white;
   border-radius: 3px;
+  cursor: pointer;
 
   transition: all linear 0.1s;
 
   &:hover {
     background-color: rgb(255, 215, 0);
   }
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+.user-info__photo {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+
+  background-size: contain;
+  border: 1px solid rgb(255, 215, 0);
+  border-radius: 50%;
+}
+
+.user-info__user-name {
+  color: rgb(255, 215, 0);
 }
 
 .main {
@@ -609,6 +638,7 @@ body {
 
   width: 100%;
   height: 100%;
+
   backdrop-filter: blur(5px) contrast(0.4);
 }
 
@@ -617,9 +647,9 @@ body {
   min-width: 400px;
   margin: 50px auto;
 
-  user-select: none;
-
   background-color: gray;
+
+  user-select: none;
 }
 
 .cheatsheet__head {
@@ -657,11 +687,12 @@ body {
 }
 
 .cheatsheet__body {
-  border: 2px solid rgb(255, 215, 0);
   padding-bottom: 10px;
 
   font-size: 22px;
   color: black;
+
+  border: 2px solid rgb(255, 215, 0);
 }
 
 .cheatsheet__list {
@@ -669,8 +700,8 @@ body {
 }
 
 .cheatsheet__list-item {
-  margin-bottom: 5px;
   align-items: center;
+  margin-bottom: 5px;
 }
 
 .cheatsheet__short {
@@ -695,8 +726,15 @@ body {
 }
 
 .over {
-  border-color: red;
   color: red;
+
+  border-color: red;
+
+  &:hover {
+    color: red;
+
+    border-color: red;
+  }
 }
 
 .hidden {
